Made steps_page responsive

--- a/step-1.htm
+++ b/step-1.htm
@@ -39,6 +39,7 @@ crossorigin="anonymous"
 </a>
 </div>
 
+<div class="step-1-wrap">
 <section id="step-1">
 <div class="step-1-container">
   <div class="step-1-content">
@@ -91,5 +92,7 @@ crossorigin="anonymous"
   </div>
 </div>
 </section>
+</div>
+
 </body>
 </html>
